--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>Trivia-App React App</title>
   </head>
-  <body class="bg-blue-500">
+  <body class="bg-orange-400">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
